<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#44bfb0"
    android:orientation="vertical" >
					
 <View 
    android:layout_width="wrap_content"
    android:layout_height="10dp"/>

 <Button
     android:id="@+id/btnname"
     android:layout_width="130dp"
     android:layout_height="wrap_content"
     android:layout_weight="2"
     android:text="@string/btnname" />

<Button
    android:id="@+id/btnname2"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_weight="2"
    android:text="@string/btname2" />

<Button
    android:id="@+id/btnname3"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_weight="2"
    android:text="@string/btname3" />

<Button
    android:id="@+id/btnsearch"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_weight="2"
    android:text="@string/search" />
"

<View 
    android:layout_width="wrap_content"
    android:layout_height="10dp"/>


</LinearLayout>