<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#44bfb0">
    
    <View 
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bte_warranty"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_date_purchase"
        android:layout_gravity="center_horizontal" 
        android:layout_margin="5dp"/>

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="7.55"
        android:datePickerMode="calendar" />
    
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnCal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:text="CALCULATE" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageBtn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.27"
            android:contentDescription="@string/msg"
            android:src="@drawable/ic_navigate_before_black_24dp" />

    </TableRow>

</LinearLayout>
